src/parsing/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> STATEMENT
Rule 1     STATEMENT -> TYPE_DECLARATION
Rule 2     STATEMENT -> FUNCTION_DEFINITIONS
Rule 3     STATEMENT -> <empty>
Rule 4     FUNCTION_DEFINITIONS -> EXPRESSION EQUAL EXPRESSION
Rule 5     FUNCTION_DEFINITIONS -> EXPRESSION CASE_LIST
Rule 6     TYPE_DECLARATION -> IDENTIFIER DOUBLE_DOTS TYPE_LIST
Rule 7     TYPE_LIST -> TYPE
Rule 8     TYPE_LIST -> TYPE ARROW TYPE_LIST
Rule 9     TYPE -> IDENTIFIER
Rule 10    TYPE -> LBRACKET TYPE RBRACKET
Rule 11    CASE_LIST -> CASE
Rule 12    CASE_LIST -> CASE CASE_LIST
Rule 13    CASE -> PIPE EXPRESSION EQUAL EXPRESSION
Rule 14    EXPRESSION -> EXPRESSION_ELEM EXPRESSION
Rule 15    EXPRESSION -> EXPRESSION_ELEM
Rule 16    EXPRESSION_ELEM -> LPARANTHESIS EXPRESSION RPARANTHESIS
Rule 17    EXPRESSION_ELEM -> VALUE
Rule 18    EXPRESSION_ELEM -> OPERATOR
Rule 19    OPERATOR -> PLUS
Rule 20    OPERATOR -> MUL
Rule 21    OPERATOR -> DIV
Rule 22    OPERATOR -> MOD
Rule 23    OPERATOR -> CONCAT
Rule 24    VALUE -> IDENTIFIER
Rule 25    VALUE -> INTEGER
Rule 26    VALUE -> FLOAT
Rule 27    VALUE -> STRING
Rule 28    VALUE -> ENV_VAR
Rule 29    VALUE -> JSON
Rule 30    VALUE_LIST -> LBRACKET RBRACKET
Rule 31    JSON -> LCURLYBRACES JSON_KV_LIST RCURLYBRACES
Rule 32    JSON_KV_LIST -> JSON_KV
Rule 33    JSON_KV -> IDENTIFIER DOTS JSON
Rule 34    JSON_VALUE_LIST -> LBRACKET RBRACKET
Rule 35    JSON_VALUE -> JSON_VALUE_LIST
Rule 36    JSON_VALUE -> JSON
Rule 37    ENV_VAR -> DOLLLAR IDENTIFIER
Rule 38    JSON_KV -> IDENTIFIER DOTS JSON_VALUE_LIST
Rule 39    VALUE -> VALUE_LIST
Rule 40    VALUE_LIST_R -> <empty>
Rule 41    JSON_VALUE_LIST_R -> <empty>
Rule 42    OPERATOR -> AND
Rule 43    OPERATOR -> OR
Rule 44    OPERATOR -> GREATER_THAN
Rule 45    OPERATOR -> LESS_THAN
Rule 46    OPERATOR -> GREATER_OR_EQUAL_THAN
Rule 47    OPERATOR -> LESS_OR_EQUAL_THAN
Rule 48    OPERATOR -> EQUALITY
Rule 49    OPERATOR -> MINUS
Rule 50    JSON_VALUE_LIST_R -> COMMA JSON_VALUE JSON_VALUE_LIST_R
Rule 51    JSON_VALUE_LIST -> LBRACKET JSON_VALUE JSON_VALUE_LIST_R RBRACKET
Rule 52    JSON_KV_LIST -> JSON_KV COMMA JSON_KV_LIST
Rule 53    JSON_VALUE -> IDENTIFIER
Rule 54    JSON_VALUE -> INTEGER
Rule 55    JSON_VALUE -> FLOAT
Rule 56    JSON_VALUE -> STRING
Rule 57    JSON_VALUE -> ENV_VAR
Rule 58    JSON_KV -> IDENTIFIER DOTS JSON_VALUE
Rule 59    VALUE -> BOOL
Rule 60    JSON_VALUE -> BOOL
Rule 61    TYPE -> LPARANTHESIS TYPE_LIST RPARANTHESIS
Rule 62    OPERATOR -> INEQUALITY
Rule 63    JSON_VALUE -> LPARANTHESIS EXPRESSION RPARANTHESIS
Rule 64    VALUE -> TYPE_CAST
Rule 65    TYPE_CAST -> LESS_THAN TYPE_LIST GREATER_THAN
Rule 66    VALUE_LIST -> LBRACKET EXPRESSION_ELEM VALUE_LIST_R RBRACKET
Rule 67    VALUE_LIST_R -> COMMA EXPRESSION_ELEM VALUE_LIST_R

Terminals, with rules where they appear

AND                  : 42
ARROW                : 8
BOOL                 : 59 60
COMMA                : 50 52 67
CONCAT               : 23
DIV                  : 21
DOLLLAR              : 37
DOTS                 : 33 38 58
DOUBLE_DOTS          : 6
EQUAL                : 4 13
EQUALITY             : 48
FLOAT                : 26 55
GREATER_OR_EQUAL_THAN : 46
GREATER_THAN         : 44 65
IDENTIFIER           : 6 9 24 33 37 38 53 58
INEQUALITY           : 62
INTEGER              : 25 54
LBRACKET             : 10 30 34 51 66
LCURLYBRACES         : 31
LESS_OR_EQUAL_THAN   : 47
LESS_THAN            : 45 65
LPARANTHESIS         : 16 61 63
MINUS                : 49
MOD                  : 22
MUL                  : 20
OR                   : 43
PIPE                 : 13
PLUS                 : 19
RBRACKET             : 10 30 34 51 66
RCURLYBRACES         : 31
RPARANTHESIS         : 16 61 63
STRING               : 27 56
error                : 

Nonterminals, with rules where they appear

CASE                 : 11 12
CASE_LIST            : 5 12
ENV_VAR              : 28 57
EXPRESSION           : 4 4 5 13 13 14 16 63
EXPRESSION_ELEM      : 14 15 66 67
FUNCTION_DEFINITIONS : 2
JSON                 : 29 33 36
JSON_KV              : 32 52
JSON_KV_LIST         : 31 52
JSON_VALUE           : 50 51 58
JSON_VALUE_LIST      : 35 38
JSON_VALUE_LIST_R    : 50 51
OPERATOR             : 18
STATEMENT            : 0
TYPE                 : 7 8 10
TYPE_CAST            : 64
TYPE_DECLARATION     : 1
TYPE_LIST            : 6 8 61 65
VALUE                : 17
VALUE_LIST           : 39
VALUE_LIST_R         : 66 67

Parsing method: LALR

state 0

    (0) S' -> . STATEMENT
    (1) STATEMENT -> . TYPE_DECLARATION
    (2) STATEMENT -> . FUNCTION_DEFINITIONS
    (3) STATEMENT -> .
    (6) TYPE_DECLARATION -> . IDENTIFIER DOUBLE_DOTS TYPE_LIST
    (4) FUNCTION_DEFINITIONS -> . EXPRESSION EQUAL EXPRESSION
    (5) FUNCTION_DEFINITIONS -> . EXPRESSION CASE_LIST
    (14) EXPRESSION -> . EXPRESSION_ELEM EXPRESSION
    (15) EXPRESSION -> . EXPRESSION_ELEM
    (16) EXPRESSION_ELEM -> . LPARANTHESIS EXPRESSION RPARANTHESIS
    (17) EXPRESSION_ELEM -> . VALUE
    (18) EXPRESSION_ELEM -> . OPERATOR
    (24) VALUE -> . IDENTIFIER
    (25) VALUE -> . INTEGER
    (26) VALUE -> . FLOAT
    (27) VALUE -> . STRING
    (28) VALUE -> . ENV_VAR
    (29) VALUE -> . JSON
    (39) VALUE -> . VALUE_LIST
    (59) VALUE -> . BOOL
    (64) VALUE -> . TYPE_CAST
    (19) OPERATOR -> . PLUS
    (20) OPERATOR -> . MUL
    (21) OPERATOR -> . DIV
    (22) OPERATOR -> . MOD
    (23) OPERATOR -> . CONCAT
    (42) OPERATOR -> . AND
    (43) OPERATOR -> . OR
    (44) OPERATOR -> . GREATER_THAN
    (45) OPERATOR -> . LESS_THAN
    (46) OPERATOR -> . GREATER_OR_EQUAL_THAN
    (47) OPERATOR -> . LESS_OR_EQUAL_THAN
    (48) OPERATOR -> . EQUALITY
    (49) OPERATOR -> . MINUS
    (62) OPERATOR -> . INEQUALITY
    (37) ENV_VAR -> . DOLLLAR IDENTIFIER
    (31) JSON -> . LCURLYBRACES JSON_KV_LIST RCURLYBRACES
    (30) VALUE_LIST -> . LBRACKET RBRACKET
    (66) VALUE_LIST -> . LBRACKET EXPRESSION_ELEM VALUE_LIST_R RBRACKET
    (65) TYPE_CAST -> . LESS_THAN TYPE_LIST GREATER_THAN

    $end            reduce using rule 3 (STATEMENT -> .)
    IDENTIFIER      shift and go to state 4
    LPARANTHESIS    shift and go to state 7
    INTEGER         shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    BOOL            shift and go to state 16
    PLUS            shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20
    MOD             shift and go to state 21
    CONCAT          shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    GREATER_THAN    shift and go to state 25
    LESS_THAN       shift and go to state 26
    GREATER_OR_EQUAL_THAN shift and go to state 27
    LESS_OR_EQUAL_THAN shift and go to state 28
    EQUALITY        shift and go to state 29
    MINUS           shift and go to state 30
    INEQUALITY      shift and go to state 31
    DOLLLAR         shift and go to state 32
    LCURLYBRACES    shift and go to state 33
    LBRACKET        shift and go to state 34

    STATEMENT                      shift and go to state 1
    TYPE_DECLARATION               shift and go to state 2
    FUNCTION_DEFINITIONS           shift and go to state 3
    EXPRESSION                     shift and go to state 5
    EXPRESSION_ELEM                shift and go to state 6
    VALUE                          shift and go to state 8
    OPERATOR                       shift and go to state 9
    ENV_VAR                        shift and go to state 13
    JSON                           shift and go to state 14
    VALUE_LIST                     shift and go to state 15
    TYPE_CAST                      shift and go to state 17

state 1

    (0) S' -> STATEMENT .



state 2

    (1) STATEMENT -> TYPE_DECLARATION .

    $end            reduce using rule 1 (STATEMENT -> TYPE_DECLARATION .)


state 3

    (2) STATEMENT -> FUNCTION_DEFINITIONS .

    $end            reduce using rule 2 (STATEMENT -> FUNCTION_DEFINITIONS .)


state 4

    (6) TYPE_DECLARATION -> IDENTIFIER . DOUBLE_DOTS TYPE_LIST
    (24) VALUE -> IDENTIFIER .

    DOUBLE_DOTS     shift and go to state 35
    LPARANTHESIS    reduce using rule 24 (VALUE -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 24 (VALUE -> IDENTIFIER .)
    INTEGER         reduce using rule 24 (VALUE -> IDENTIFIER .)
    FLOAT           reduce using rule 24 (VALUE -> IDENTIFIER .)
    STRING          reduce using rule 24 (VALUE -> IDENTIFIER .)
    BOOL            reduce using rule 24 (VALUE -> IDENTIFIER .)
    PLUS            reduce using rule 24 (VALUE -> IDENTIFIER .)
    MUL             reduce using rule 24 (VALUE -> IDENTIFIER .)
    DIV             reduce using rule 24 (VALUE -> IDENTIFIER .)
    MOD             reduce using rule 24 (VALUE -> IDENTIFIER .)
    CONCAT          reduce using rule 24 (VALUE -> IDENTIFIER .)
    AND             reduce using rule 24 (VALUE -> IDENTIFIER .)
    OR              reduce using rule 24 (VALUE -> IDENTIFIER .)
    GREATER_THAN    reduce using rule 24 (VALUE -> IDENTIFIER .)
    LESS_THAN       reduce using rule 24 (VALUE -> IDENTIFIER .)
    GREATER_OR_EQUAL_THAN reduce using rule 24 (VALUE -> IDENTIFIER .)
    LESS_OR_EQUAL_THAN reduce using rule 24 (VALUE -> IDENTIFIER .)
    EQUALITY        reduce using rule 24 (VALUE -> IDENTIFIER .)
    MINUS           reduce using rule 24 (VALUE -> IDENTIFIER .)
    INEQUALITY      reduce using rule 24 (VALUE -> IDENTIFIER .)
    DOLLLAR         reduce using rule 24 (VALUE -> IDENTIFIER .)
    LCURLYBRACES    reduce using rule 24 (VALUE -> IDENTIFIER .)
    LBRACKET        reduce using rule 24 (VALUE -> IDENTIFIER .)
    EQUAL           reduce using rule 24 (VALUE -> IDENTIFIER .)
    PIPE            reduce using rule 24 (VALUE -> IDENTIFIER .)


state 5

    (4) FUNCTION_DEFINITIONS -> EXPRESSION . EQUAL EXPRESSION
    (5) FUNCTION_DEFINITIONS -> EXPRESSION . CASE_LIST
    (11) CASE_LIST -> . CASE
    (12) CASE_LIST -> . CASE CASE_LIST
    (13) CASE -> . PIPE EXPRESSION EQUAL EXPRESSION

    EQUAL           shift and go to state 36
    PIPE            shift and go to state 39

    CASE_LIST                      shift and go to state 37
    CASE                           shift and go to state 38

state 6

    (14) EXPRESSION -> EXPRESSION_ELEM . EXPRESSION
    (15) EXPRESSION -> EXPRESSION_ELEM .
    (14) EXPRESSION -> . EXPRESSION_ELEM EXPRESSION
    (15) EXPRESSION -> . EXPRESSION_ELEM
    (16) EXPRESSION_ELEM -> . LPARANTHESIS EXPRESSION RPARANTHESIS
    (17) EXPRESSION_ELEM -> . VALUE
    (18) EXPRESSION_ELEM -> . OPERATOR
    (24) VALUE -> . IDENTIFIER
    (25) VALUE -> . INTEGER
    (26) VALUE -> . FLOAT
    (27) VALUE -> . STRING
    (28) VALUE -> . ENV_VAR
    (29) VALUE -> . JSON
    (39) VALUE -> . VALUE_LIST
    (59) VALUE -> . BOOL
    (64) VALUE -> . TYPE_CAST
    (19) OPERATOR -> . PLUS
    (20) OPERATOR -> . MUL
    (21) OPERATOR -> . DIV
    (22) OPERATOR -> . MOD
    (23) OPERATOR -> . CONCAT
    (42) OPERATOR -> . AND
    (43) OPERATOR -> . OR
    (44) OPERATOR -> . GREATER_THAN
    (45) OPERATOR -> . LESS_THAN
    (46) OPERATOR -> . GREATER_OR_EQUAL_THAN
    (47) OPERATOR -> . LESS_OR_EQUAL_THAN
    (48) OPERATOR -> . EQUALITY
    (49) OPERATOR -> . MINUS
    (62) OPERATOR -> . INEQUALITY
    (37) ENV_VAR -> . DOLLLAR IDENTIFIER
    (31) JSON -> . LCURLYBRACES JSON_KV_LIST RCURLYBRACES
    (30) VALUE_LIST -> . LBRACKET RBRACKET
    (66) VALUE_LIST -> . LBRACKET EXPRESSION_ELEM VALUE_LIST_R RBRACKET
    (65) TYPE_CAST -> . LESS_THAN TYPE_LIST GREATER_THAN

    EQUAL           reduce using rule 15 (EXPRESSION -> EXPRESSION_ELEM .)
    PIPE            reduce using rule 15 (EXPRESSION -> EXPRESSION_ELEM .)
    RPARANTHESIS    reduce using rule 15 (EXPRESSION -> EXPRESSION_ELEM .)
    $end            reduce using rule 15 (EXPRESSION -> EXPRESSION_ELEM .)
    LPARANTHESIS    shift and go to state 7
    IDENTIFIER      shift and go to state 41
    INTEGER         shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    BOOL            shift and go to state 16
    PLUS            shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20
    MOD             shift and go to state 21
    CONCAT          shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    GREATER_THAN    shift and go to state 25
    LESS_THAN       shift and go to state 26
    GREATER_OR_EQUAL_THAN shift and go to state 27
    LESS_OR_EQUAL_THAN shift and go to state 28
    EQUALITY        shift and go to state 29
    MINUS           shift and go to state 30
    INEQUALITY      shift and go to state 31
    DOLLLAR         shift and go to state 32
    LCURLYBRACES    shift and go to state 33
    LBRACKET        shift and go to state 34

    EXPRESSION_ELEM                shift and go to state 6
    EXPRESSION                     shift and go to state 40
    VALUE                          shift and go to state 8
    OPERATOR                       shift and go to state 9
    ENV_VAR                        shift and go to state 13
    JSON                           shift and go to state 14
    VALUE_LIST                     shift and go to state 15
    TYPE_CAST                      shift and go to state 17

state 7

    (16) EXPRESSION_ELEM -> LPARANTHESIS . EXPRESSION RPARANTHESIS
    (14) EXPRESSION -> . EXPRESSION_ELEM EXPRESSION
    (15) EXPRESSION -> . EXPRESSION_ELEM
    (16) EXPRESSION_ELEM -> . LPARANTHESIS EXPRESSION RPARANTHESIS
    (17) EXPRESSION_ELEM -> . VALUE
    (18) EXPRESSION_ELEM -> . OPERATOR
    (24) VALUE -> . IDENTIFIER
    (25) VALUE -> . INTEGER
    (26) VALUE -> . FLOAT
    (27) VALUE -> . STRING
    (28) VALUE -> . ENV_VAR
    (29) VALUE -> . JSON
    (39) VALUE -> . VALUE_LIST
    (59) VALUE -> . BOOL
    (64) VALUE -> . TYPE_CAST
    (19) OPERATOR -> . PLUS
    (20) OPERATOR -> . MUL
    (21) OPERATOR -> . DIV
    (22) OPERATOR -> . MOD
    (23) OPERATOR -> . CONCAT
    (42) OPERATOR -> . AND
    (43) OPERATOR -> . OR
    (44) OPERATOR -> . GREATER_THAN
    (45) OPERATOR -> . LESS_THAN
    (46) OPERATOR -> . GREATER_OR_EQUAL_THAN
    (47) OPERATOR -> . LESS_OR_EQUAL_THAN
    (48) OPERATOR -> . EQUALITY
    (49) OPERATOR -> . MINUS
    (62) OPERATOR -> . INEQUALITY
    (37) ENV_VAR -> . DOLLLAR IDENTIFIER
    (31) JSON -> . LCURLYBRACES JSON_KV_LIST RCURLYBRACES
    (30) VALUE_LIST -> . LBRACKET RBRACKET
    (66) VALUE_LIST -> . LBRACKET EXPRESSION_ELEM VALUE_LIST_R RBRACKET
    (65) TYPE_CAST -> . LESS_THAN TYPE_LIST GREATER_THAN

    LPARANTHESIS    shift and go to state 7
    IDENTIFIER      shift and go to state 41
    INTEGER         shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    BOOL            shift and go to state 16
    PLUS            shift and go to state 18
    MUL             shift and go to state 19
    DIV             shift and go to state 20
    MOD             shift and go to state 21
    CONCAT          shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    GREATER_THAN    shift and go to state 25
    LESS_THAN       shift and go to state 26
    GREATER_OR_EQUAL_THAN shift and go to state 27
    LESS_OR_EQUAL_THAN shift and go to state 28
    EQUALITY        shift and go to state 29
    MINUS           shift and go to state 30
    INEQUALITY      shift and go to state 31
    DOLLLAR         shift and go to state 32
    LCURLYBRACES    shift and go to state 33
    LBRACKET        shift and go to state 34

    EXPRESSION                     shift and go to state 42
    EXPRESSION_ELEM                shift and go to state 6
    VALUE                          shift and go to state 8
    OPERATOR                       shift and go to state 9
    ENV_VAR                        shift and go to state 13
    JSON                           shift and go to state 14
    VALUE_LIST                     shift and go to state 15
    TYPE_CAST                      shift and go to state 17

state 8

    (17) EXPRESSION_ELEM -> VALUE .
